Fixed retry instruction order not visible issue

--- a/src/main/angular/client/src/styles/dark-style.css
+++ b/src/main/angular/client/src/styles/dark-style.css
@@ -1057,6 +1057,8 @@ div.CodeMirror-selected {
   color: #D8FA3C !important;
 }
 
+.cm-type,
+.cm-variable-3,
 .cm-def {
   color: #66D9EF !important;
 }
